snort-http-filter/yaml/envoy-tap-https-http-snort.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 10001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "strata.net"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service-http
          http_filters:
          - name: envoy.filters.http.snort
            typed_config:
              "@type": type.googleapis.com/envoy.filters.http.snort.SnortHttpConfig
              stat_prefix: log
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
            name: envoy.transport_sockets.tap
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tap.v3.Tap
              common_config:
                static_config:
                  match:
                    any_match: true
                  output_config:
                    sinks:
                      - format: PROTO_TEXT
                        file_per_tap:
                          path_prefix: /home/manoj/envoy/envoy-filter-example/tap
              transport_socket:
                name: envoy.transport_sockets.tls
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                  common_tls_context:
                    tls_certificates:
                    # The following self-signed certificate pair is generated using:
                    # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem \
                    #       -days 3650 -nodes -subj '/CN=front-envoy'
                    #
                    # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
                    # via filename. Reference: https://envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
                    #
                    # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
                    # Secret Discovery Service (SDS). Reference: https://envoyproxy.io/docs/envoy/latest/configuration/security/secret.
                    - certificate_chain:
                        inline_string: |
                          -----BEGIN CERTIFICATE-----
                          MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                          m+/R4XnmL4cKQ+5Z
                          -----END CERTIFICATE-----
                      private_key:
                        inline_string: |
                          -----BEGIN PRIVATE KEY-----
                          MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                          q5sGxGrC1RECGB5Zwx2S2ZY=
                          -----END PRIVATE KEY-----

  clusters:
  - name: service-http
    connect_timeout: 5s
    load_assignment:
      cluster_name: service-http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 5050
